After 1h of work in class, continuing now at home

--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <main>
+      <div>
+        <img class="phone-image" src="images/phones.png">
+      </div>
+      <div class="info-container">
+        <header>
+          <div>
+            <img class="insta-logo" src="images/brand.png">
+          </div>
+          <button class="home-button">
+            <img src="images/home.png">
+            <p>Log in</p>
+          </button>
+        </header>
+        <div class="text-section">
+          <h1>Capture and Share<br> the World's Moments</h1>
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+              friends and family. <br><br>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+              Oh yeah, did we mention it's free? </p>
+          <div>
+            <button class="app-store-button">
+                <p>Download on the App Store</p>
+            </button>
+            <button class="google-play-button">
+                <p>Get it on Google Play</p>
+            </button>
+          </div>
+        </div>
+      </div>
+
+    </main>
+    <footer>
+      <div class="footer">
+        <ul class=footer-list>
+          <li> About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </div>
+    </footer>
+</body>
 </html>
