--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </div>
           <button class="home-button">
             <img src="images/home.png">
-            <p>Log in</p>
+            <p><strong>Log in</strong></p>
           </button>
         </header>
         <div class="text-section">
@@ -29,12 +29,8 @@
               &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
               Oh yeah, did we mention it's free? </p>
           <div>
-            <button class="app-store-button">
-                <p>Download on the App Store</p>
-            </button>
-            <button class="google-play-button">
-                <p>Get it on Google Play</p>
-            </button>
+              <a href="#" target="_blank"><input type="button" class="app-store-button"/></a>
+              <a href="#" target="_blank"><input type="button" class="google-play-button"/></a>
           </div>
         </div>
       </div>
@@ -51,7 +47,7 @@
           <li>Jobs</li>
           <li>Privacy</li>
           <li>Terms</li>
-          <li>&copy; 2014 Instagram</li>
+          <li id="copyright">&copy; 2014 Instagram</li>
         </ul>
       </div>
     </footer>
