--- a/index.html
+++ b/index.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="body-container">
+    <div id="phone-img"><img src="images/phones.png" >
+    </div>
+    <div id="content-container">
+      <div id="header">
+      <img src="images/brand.png" > 
+      <div id="button">
+        <img id ="home" src="images/home.png" height="20px" >
+        <p id="login"><b>Login</b></p>
+      </div>
+     </div> 
+    <div id="text">
+      <h1>Capture and Share <br> the World's Moments</h1>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way  to share your life with
+        friends and family. </p>
+        <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+    <div id="download">
+    <img id="phone" src="images/badge-iphone.png" >
+    <img id="phone" src="images/badge-android.png" >
+  </div>
+  </div>
+  </div>
+  </div>
+  <div id="footer">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copyright">c 2014 Instagram</li>
+    </ul>   
+  </div>
   </body>
 </html>
