--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main">
+
+      <div class="block_left">
+        <img src="/images/phones.png" alt="">
+      </div>
+
+
+      <section class="block_right">
+
+        <div class="logo_cta">
+          <img src="/images/brand.png" alt="">
+
+         <div class="button">
+          <img src="/images/home.png" alt="">
+          <p>Log in</p>
+        </div>
+
+        </div>
+        
+        <div class="card">
+
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?
+          </p>
+          <div>
+            <img src="/images/badge-iphone.png" alt="">
+            <img src="/images/badge-android.png" alt="">
+          </div>
+
+        </div>
+
+
+      </section>
+
+    
+
+    </div>
+
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>ABOUT US</li>
+        <li>ABOUT US</li>
+        <li>ABOUT US</li>
+        <li>ABOUT US</li>
+      </ul>
+    </footer>
   </body>
 </html>
