--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <!-- main box -->
+    <div class="main-box">
+
+      <!-- phones picture box -->
+      <div class="phones-picture-box">
+        <img src="/images/phones.png" alt="phones picture" />
+      </div>
+
+      <!-- bigger box on the right-->
+      <div class="right-box">
+        <!-- instagram logo box-->
+        <div class="logo-box">
+          <img src="/images/brand.png" />
+          <!-- instagram log-in box-->
+          <button class="button">
+            <img src="/images/home.png" />
+            <span>Log in</span>
+          </button>
+        </div>
+
+        <!-- text box -->
+        <div class="text-box">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <!-- apps box -->
+          <div class="badges-box">
+            <img src="/images/badge-iphone.png" />
+            <img src="/images/badge-android.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <nav class="nav-bar">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">&copy; 2014 Instagram</a></li>
+        </ul>
+      </nav>
+    </footer>     
   </body>
 </html>
