--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
         <div class="card">
 
           <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a fast, beautiful and fun way to share your life with
-            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          <p>Instagram is a <strong>fast</strong>, <strong> beautiful </strong>and<strong> fun</strong> way to share your life with
+            friends and family.
+            <br>
+            <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>
+            <br>
             Oh yeah, did we mention it's free?
           </p>
-          <div>
+          <div class="download_logos">
             <img src="/images/badge-iphone.png" alt="">
             <img src="/images/badge-android.png" alt="">
           </div>
@@ -45,16 +50,19 @@
       </section>
 
     
-
+   
     </div>
-
     <footer>
       <ul>
         <li>ABOUT US</li>
-        <li>ABOUT US</li>
-        <li>ABOUT US</li>
-        <li>ABOUT US</li>
-        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li>© 2014 INSTAGRAM</li>
       </ul>
     </footer>
   </body>
