--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <div id="body-container">
+    <div id="phone-img">
+      <img src="images/phones.png" alt="picture of a iPhone">
+    </div>
+
+    <div id="content-container">
+      <div id="header">
+        <img src="images/brand.png" alt="Instagram logo">
+        <!-- Button -->
+        <div id="button">
+          <img src="images/home.png" alt="home icon">
+          <p>Log In</p>
+        </div>
+      </div>
+
+      <div id="text">
+
+        <h1>Capture and Share <br>the World's Moments </h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family.</p> 
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+          Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.</p>
+          <p>
+          Oh yeah, did we mention it's free? </p>
+
+      </div>
+      <div id="download">
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+      </div>
+    </div>
+  </div>
+
+  <div id="footer">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </div>
+</body>
+
 </html>
