--- a/index.html
+++ b/index.html
@@ -1,16 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <div class="page">
+    <aside>
+      <picture>
+        <img src="images/phones.png" />
+      </picture>
+    </aside>
+
+    <section class="right">
+      <div class="header">
+        <picture id="logo">
+          <img src="images/brand.png" />
+        </picture>
+        <div id="login">
+          <picture id="home">
+            <img src="images/home.png" />
+          </picture>
+          Log in
+        </div>
+      </div>
+
+      <div class="text">
+        <section class="intro">
+          <h2>Capture and Share the World's Moments</h2>
+
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          </p>
+
+          </p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.</p>
+
+          <p>Oh yeah, did we mention it's free?</p>
+        </section>
+
+        <!--to be replaced with icons-->
+        <section id="download">
+          <picture>
+            <img src="images/badge-iphone.png" />
+          </picture>
+          <picture>
+            <img src="images/badge-android.png" />
+          </picture>
+        </section>
+      </div>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <span>About Us</span>
+    <span>Support</span>
+    <span>Blog</span>
+    <span>Press</span>
+    <span>API</span>
+    <span>Jobs</span>
+    <span>Privacy</span>
+    <span>Terms</span>
+    <span class="grey">&copy; 2014 Instagram</span>
+  </footer>
+
+</body>
+
 </html>
