--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
   </div>
 
   <footer>
-    <span>About Us</span>
-    <span>Support</span>
-    <span>Blog</span>
-    <span>Press</span>
-    <span>API</span>
-    <span>Jobs</span>
-    <span>Privacy</span>
-    <span>Terms</span>
+    <a href=#>About Us</a>
+    <a href=#>Support</a>
+    <a href=#>Blog</a>
+    <a href=#>Press</a>
+    <a href=#>API</a>
+    <a href=#>Jobs</a>
+    <a href=#>Privacy</a>
+    <a href=#>Terms</a>
     <span class="grey">&copy; 2014 Instagram</span>
   </footer>
 
