CSS IG clone done

--- a/index.html
+++ b/index.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <section class="main-content">
+    <section class="stacked-iphones">
+      <picture>
+        <img src="images/phones.png" alt="stacked iphones with Instagram interface">
+      </picture>
+    </section>
+
+    <section class="info-content-overall">
+      <section class="info-content-top">
+        <img src="images/brand.png" alt="Instagram logo" class="ig-logo">
+        <button class="log-in-button"> <img src="images/home.png" alt="home login button">Log in</button>
+
+
+      </section>
+      <section class="info-content">
+        <section class="info-content-text">
+          <h1>Capture and Share the World's Moments</h1>
+
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b>, and <b>fun</b> way to share your life with friends and
+            family.<br>
+            <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+            <br>
+            Oh yeah, did we mention it's free?
+          </p>
+        </section>
+
+        <section class="info-content-download-images">
+          <img src="images/badge-iphone.png" alt="download on the Apple Store badge">
+          <img src="images/badge-android.png" alt="get it on Google Play badge">
+        </section>
+      </section>
+    </section>
+  </section>
+
+  <footer class="footer">
+    <span class="footer-links">About Us Support Blog Press API Jobs Privacy Terms </span>
+    <span class="footer-IG-copyright">&copy; 2019 Instagram</span></footer>
+</body>
+
 </html>
