--- a/index.html
+++ b/index.html
@@ -5,12 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main">
+
+      <div class="left">
+        <picture>
+          <img src="images/phones.png" />
+        </picture>
+      </div>
+  
+      <section class="right">
+        <div class="header">
+          <picture class="logo">
+            <img src="images/brand.png" />
+          </picture>
+          <div class="login">
+            <picture class="home">
+              <img src="images/home.png" />
+            </picture>
+            <p>Log in</p>
+          </div>
+        </div>
+  
+        <div class="content">
+          <section class="intro">
+            <h2>Capture and Share the World's Moments</h2>
+  
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+            </p>
+  
+            </p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.</p>
+  
+            <p>Oh yeah, did we mention it's free?</p>
+          </section>
+  
+          <!--to be replaced with icons-->
+          <section class="download">
+            <picture>
+              <img src="images/badge-iphone.png" />
+            </picture>
+            <picture>
+              <img src="images/badge-android.png" />
+            </picture>
+          </section>
+        </div>
+  
+      </section>
+  
+    </div>
+  
+    <footer>
+      <ul class="footer">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="grey">&copy; 2014 Instagram</li>
+      </ul>  
+    </footer>
+  
   </body>
 </html>
