--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+   <link rel="stylesheet" href= "styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+    <div class= "background">
+
+    </div>
+    <div>
+      <img class="phones" src="images/phones.png" alt="phones">
+    </div>
+
+    <div class= "marcatexto">
+      <img class="brand" src="images/brand.png">
+      <img class= "home" src="images/home.png">
+    <p>Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram</p>
+    <img src="images/badge-iphone.png">
+    <img src="images/badge-android.png">
+    </div>
+    <div>
+      
+    </div>
   </body>
 </html>
