--- a/index.html
+++ b/index.html
@@ -4,13 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+    <section class="estilo">
+      <section>
+        <img src="images/phones.png" alt="phones"/>
+      </section>
+      <section>
+      <div>
+         <div>
+         <img src="images/brand.png"/>
+         <img src="images/home.png"/>
+         <h6>Log in</h6>
+         </div>
+         <div>
+         <img src="images/frame.png"/>
+         <h1>Capture and Share the World's Moments</h1>
+         <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life<br> with
+            friends and family.</p>
+         <p>Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram
+             &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a <br>new way to see the world.
+         <p>Oh yeah, did we mention it's free?</p>
+         </div>
+         <div>
+         <img src="images/badge-iphone.png"/> 
+         <img src="images/badge-android.png"/>
+         </div>
+      </div>
+      </section>
+    </section>
+    <ul>
+      <li>About Us</li>
+      <li> Support</li>
+    </ul>
+    
+    Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram
   </body>
 </html>
