--- a/index.html
+++ b/index.html
@@ -3,14 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css">
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+  <section id="topframe">
+    <div class="logo">
+    <img src="images/brand.png" alt="Intagram">
+  </div>
+    <button class="button">
+    <img class="home" src="images/home.png" alt="Home"> <span>Log In</span>
+    </button>
+  </section>
+  <section id="phone">
+  <img src="images/phones.png" alt="Phones">
+  </section>
+    <article class="text">
+    <h2>Capture and Share <br>the World's Moments</h2> 
+    <p>Instagram is a fast, beautiful and fun way to share your life with
+    friends and family.</p> <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+    <p>Oh yeah, did we mention it's free? </p>
+  </article>
+<section id="download">
+<img src="images/badge-iphone.png" alt="IOS"><img src="images/badge-android.png" alt="Android">
+</section>
+<nav id="Info">
+<ul>
+<li><a href="">About Us</a></li>
+<li><a href="">Support</a></li> 
+<li><a href="">Blog</a></li> 
+<li><a href="">Press</a></li> 
+<li><a href="">API</a></li>  
+<li><a href="">Jobs</a></li> 
+<li><a href="">Privacy</a></li>
+<li><a href="">Terms</a></li>
+<li id="copyrights">&copy; 2014 Instagram</li>
+</ul>
+<span></span>
+</nav>
+</body>
 </html>
