--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div id="phoneImage">
+            <img src="./images/phones.png" alt="phones">
+          </div>
+        </div>
+        <div class="col itemGrow2 leftMargin10" >
+          <div class="row" id="firstRow">
+            <div id="brand" class="itemGrow1">
+              <img src="./images/brand.png" alt="brand image">
+            </div>
+            <div id="login">
+              <a href="#" class="button blue"><i class="fa fa-home"></i> Log in</a>
+            </div>
+          </div>
+          <div class="row">
+            <div id="card">
+              <div class="header">
+                <h1>Capture and Share<br>the World's Moments</h1> 
+              </div>
+              <div>
+                <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+                  friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                  &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
+              </div>
+              <div class="badges">
+                <img src="./images/badge-android.png">
+                <img src="./images/badge-iphone.png">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="menu">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li class="notBold">&copy; 2014 Instagram</li>
+          </ul>
+        </div>
+      </div>
   </body>
 </html>
