--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="blue-header"></div>
+    <div class="generalSection">
+      <div class="centerbox">
+        <div class="phones">
+        <img src="images/phones.png" alt="phones">
+        </div>
+        <section class="text">
+          <div class="title">
+            <img src="images/brand.png" alt="IG Logo">
+            <div class="login">
+              <img src="images/home.png" alt="home">
+              <p>Log in</p>
+            </div>
+          </div>
+          <div class="message-box">
+            <h1>Capture and Share <br> the World's Moments</h1>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family <br> <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagra - It's that easy. you can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world <br> <br>
+            Oh yeah, did we mention it's free? <br> <br> </p>
+            <section class="dowloads">
+              <img src="images/badge-iphone.png" alt="iphone-Download">
+              <img src="images/badge-android.png" alt="androiddownload">
+            </section>
+          </div>
+        </section>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li class="copyright">© 2014 INSTAGRAM</li>
+      </ul>
+    </footer>
   </body>
 </html>
