--- a/index.html
+++ b/index.html
@@ -1,16 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <div class="background">
+    <div class="mainContainer">
+      <div class="left">
+        <img src="images/phones.png" alt="phones image">
+      </div>
+      <div class="right">
+        <div class="logoHome">
+          <div class="logoimgcontainer">
+            <img class="logoimg" src="images/brand.png" alt="brand">
+          </div>
+          <div class="homeButton">
+            <button type="button" class="loginButton">
+              <img class="homeimg" src="images/home.png" alt="home">
+              Log in
+            </button>
+          </div>
+        </div>
+        <div class="frame">
+          <div class="mainText">
+            <h2>Capture and Share <br> the World's Moments</h2>
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+              <br><br>Take a picture of video, chose a filter to transform its look and feel, then post to Instagram --
+              it's that
+              easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <br><br>Oh yeah, did we mention it's free?</p>
+          </div>
+        </div>
+        <div class="storeButtons">
+          <div class="appstore">
+            <img class="appstoreImg" src="images/badge-iphone.png" alt="appstore">
+          </div>
+          <div class="googlePlayButton">
+            <img class="googlePlayImg" src="images/badge-android.png" alt="googleplay">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <ul class="footerList">
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li id="copy">&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </div>
+
+  </div>
+
+
+
+</body>
+
 </html>
