--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/Users/acammarata/Desktop/IronHack/Git/Git-IronHack/lab-css-instagram-clone/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="phone">
+      <img src="/Users/acammarata/Desktop/IronHack/Git/Git-IronHack/lab-css-instagram-clone/images/phones.png" alt="phones picture">
+    </section>
+    <section id="content">
+      <div class="logo">
+        <img src="/Users/acammarata/Desktop/IronHack/Git/Git-IronHack/lab-css-instagram-clone/images/brand.png" alt="Logo">
+        <a href="#" class="log-in">
+          <img src="/Users/acammarata/Desktop/IronHack/Git/Git-IronHack/lab-css-instagram-clone/images/home.png" alt="Home Icon">
+          <span>Log in</span>
+        </a>
+      </div>
+      <div class="text">
+        <h2>
+          Capture and Share the World's Moments
+        </h2>
+        <article>
+          Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </article>
+        <article>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </article>
+        <article>
+          Oh yeah, did we mention it's free?
+        </article>
+        <div class="stores">
+          <img src="./images/badge-iphone.png" alt="Download App Store">
+          <img src="./images/badge-android.png" alt="Download Google play">
+        </div>
+      </div>
+    </section>
+    <footer >
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
