Web-Mex-PT2 Daniela

--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- don't forget to link your styles -->
+
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <style>
+    body {
+  background-image: url("images/bgtile.png");
+  background-color: #cccccc;}
+    </style>
+
+    <section class="top">
+    <div>
+     <img class="brand" src="images/brand.png" alt="logo"/>
+    </div>
+
+    <div class="login">
+      <img src="images/home.png" alt="log-in"/>
+      <p>Log In</p>
+    </div>
+  </section>
+
+    <div class="phones">
+      <img src="images/phones.png" alt="phones"/>
+    </div>
+
+    <div class="text">
+      <h2 class>Capture and Share the World's Moments</h2>
+      <article>
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <br>
+        <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+    <br>
+    Oh yeah, did we mention it's free?
+      </article>
+    </div>
+
+    <div class="footer">
+      <article class="footerOps">
+        About Us Support Blog Press API Jobs Privacy Terms
+      </article>
+      <p>&copy; 2014 Instagram</p>
+    </div>
+
+    <div class="apps">
+      <img src="images/badge-iphone.png" alt="badge-iphone"/>
+      <img src="images/badge-android.png" alt="badge-android"/>
+    </div>
   </body>
 </html>
