--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
           </button>
         </header>
 
-        <div>
-          <h2>
-            Capture and Share the World's Moments
-          </h2>
-          <p>
-            Instagram is a <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life with friends and family.<br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>Oh yeah, did we mention it's free?
-          </p>
-        </div>
+        <div id="main-content">
+          <div id="key-benefits">
+            <h2>
+              Capture and Share the World's Moments
+            </h2>
+            <p>
+              Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>Oh yeah, did we mention it's free?
+            </p>
+          </div>
 
-        <div>
-          <img src="./images/badge-iphone.png" alt="Download on the App Store">
-          <img src="./images/badge-android.png" alt="Get it on Google Play">
+          <div>
+            <img src="./images/badge-iphone.png" alt="Download on the App Store">
+            <img src="./images/badge-android.png" alt="Get it on Google Play">
+          </div>
         </div>
       </section>
     </div>
