--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <!-- Bloque izquierdo -->
+    <section class="iphones">
+      <img src="./images/phones.png" alt="iPhones"/>
+    </section> 
+  
+    <!-- Bloque derecho -->
+
+    <main>
+        <!-- Encabezado -->
+        <header>
+          <img class="logo" src="../lab-css-instagram-clone/images/brand.png"/>
+          <button class="log-in">
+            <img class="log-in" src="../lab-css-instagram-clone/images/home.png"/>
+            Log in     
+          </button>
+        </header>
+
+        <!-- Content -->
+        <article class="content">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.<br><br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+            Oh yeah, did we mention it's free?</p> 
+
+            <!-- Downloads -->
+          <div class="downloads">
+            <img class="iphone-app" src="./images/badge-iphone.png" alt="download-iPhone"/>
+            <img src="./images/badge-android.png" alt="download-Andoird"/>
+          </div>
+        </article>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a class="copyright" href="#">&copy; 2014 Instagram</a></li>
+      </ul>
+    </footer>     
+       
   </body>
 </html>
