--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css"/>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <section>
+      <img src="../lab-css-instagram-clone/images/phones.png" id="phones">
+      <div class= "content">
+        <header>
+          <img src="images/brand.png">
+          <button class="button">
+            <img src="images/home.png">
+            Log in 
+          </button>
+        </header>
+        <div class="container">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life <br>
+          with friends and family.<br><br>
+        Take a picture or video, choose a filter to transform its look <br> 
+      and feel, then post to instagram - it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br>
+    new way to see the world. <br><br>
+  Oh  yeah, did we mention it's free?</p>
+  <div>
+    <img src="images/badge-iphone.png">
+    <img src="images/badge-android.png">
+  </div>
+        </div>
+      </div>
+    </section>
   </body>
+
+  <footer>
+    <ul>
+    <li> ABOUT US</li>
+    <li> SUPPORT</li>
+    <li> BLOG</li>
+    <li> PRESS</li>
+    <li> API</li>
+    <li> JOBS</li>
+    <li> PRIVACY</li>
+    <li> TERMS</li>
+    <li id="copyrigth"> © 2014 INSTAGRAM </li>
+  </ul>
+  </footer>
 </html>
