--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
         <img src="images/phones.png" alt="phones"/>
       </section>
       <section>
-      <div>
-         <div>
-         <h6> <img src="images/brand.png"/> <img src="images/home.png"/> Log in </h6>
-         </div>
-         <div>
+        <div class="div">
+         <img class="instagram" src="images/brand.png"/>
+         <h6> <img src="images/home.png"/> Log in </h6>
+        </div>
          <img src="images/frame.png"/>
          <h1>Capture and Share <br> the World's Moments</h1>
          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life<br> with
