--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="/styles/style.css">
+</head>
+
+<body>
+  <header>
+    <img id="instagram-logo" src="/images/brand.png" alt="instagram logo">
+    <button class="login-button"><a href="#">Log in</a></button>
+  </header>
+
+  <section id="main-section">
+    <div><img id="phones-img" src="/images/phones.png" alt="phones displaying instagram app"></div>
+
+    <div id="main-text-box">
+      <h2>Capture and Share the World's Moments</h2>
+      <article>
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life
+        with friends and family.<br>
+        <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that
+        easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+        <br>
+        Oh yeah, did we mention it's free?
+      </article>
+      
+      <div id="main-buttons">
+        <button class="app-store-button"><a href="#"></a></button>
+        <button class="play-store-button"><a href="#"></a></button>
+      </div>
+    </div>
+  </section>
+
+
+
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">APIJobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li id="copyright-li"> &copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+
+</body>
+
 </html>
