--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="upper-container">
+      <div class="container clearfix">
+        <div class="panel">
+          <div class="phones">
+            <img src="./images/phones.png" alt="">
+          </div>
+          <div class="panel-text">
+            <div class="panel-header">
+              <img src="./images/brand.png" alt="">
+              <button class="log-in"><img src="./images/home.png" alt="" width="20px"> Log in</button>
+            </div>
+            <div class="panel-text-container">
+              <div class="text-intro">
+                <h3>Capture and Share the World's Moments</h3>
+                <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family. 
+                  <br>
+                  <br>
+                  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+                  Twitter, Tumblr and more. It's a new way to see the world. 
+                  <br>
+                  <br>
+                  Oh yeah, did we mention it's free? </p>
+              </div>
+              <div class="download-buttons">
+                <img class="badge-android" src="./images/badge-android.png" alt="">
+                <img class="badge-iphone" src="./images/badge-iphone.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer">
+          <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li class="copy">&copy; 2014 Instagram</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="lower-container"></div>
   </body>
-</html>
+  
+  </html>
+  
