[Remote WD PT 101020] Thomas Schweers- second update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Instagram Clone</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
     <div class="container">
