HTML pequeñas modificaciones

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram -->
     <section id="phone">
-      <img src="./images/phones.png" alt="phone-picture">
+      <img class="imagen-phone" src="./images/phones.png" alt="phone-picture">
     </section>
     <section id="main">
       <div class="logo">
         <img src="./images/brand.png" alt="logo">
         <a href="#" class="log-in">
           <img src="./images/home.png" alt="home-logo">  
+          <span>Log in</span>
         </a>
-        <span>Log in</span>
       </div>
 <div class="content">
   <h2>
     Capture and Share the World's Moments
   </h2>
   <article>
-    Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+    Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
   </article>
   <article>
     Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
@@ -44,17 +44,17 @@
 </section>
     </section>
     <!-- FOOTER -->
-    <footer id="menu-bar">
+    <footer>
       <ul>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Press</a></li>
-        <li><a href="#">API</a></li>
-        <li><a href="#">Jobs</a></li>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-        <li class="copyright">&copy; 2014 Instagram</li>
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</a></li>
+        <li>Privacy</a></li>
+        <li>Terms</a></li>
+        <li>&#169; 2014 Instagram</li>
       </ul>
     </footer>
   </body>
