CSS content + footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="main">
       <div class="logo">
         <img src="./images/brand.png" alt="logo">
-        <a href="#" class="log-in">
+        <a class="log-in">
           <img src="./images/home.png" alt="home-logo">  
           <span>Log in</span>
         </a>
@@ -37,8 +37,8 @@
     Oh yeah, did we mention it's free?
   </article>
   <div class="download">
-    <img src="./images/badge-iphone.png" alt="Iphone">
-    <img src="./images/badge-android.png" alt="Android">
+    <img class="img-download" src="./images/badge-iphone.png" alt="Iphone">
+    <img class="img-download" src="./images/badge-android.png" alt="Android">
 </div>
 </div>
 </section>
@@ -54,7 +54,7 @@
         <li>Jobs</a></li>
         <li>Privacy</a></li>
         <li>Terms</a></li>
-        <li>&#169; 2014 Instagram</li>
+        <li class="copyright">&#169; 2014 Instagram</li>
       </ul>
     </footer>
   </body>
