--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><link rel="stylesheet" href="C:/Users/luizz/OneDrive/EScritorio/lab-css-instagram-clone/styles/style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <div class="capsula" > 
+    <div id= "fondo" >
+      <div id="iphone"><img src="images/phones.png"/></div>
+      <div id="instagram"><img src="images/brand.png"/></div>
+      <div id="frame" ><img src="images/frame.png"/>
+          <h1>Capture and Share the World's Moments</h1>
+        <p> Instagram is a fast, beautiful and fun way to share your life with
+        friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free?</p>
+        <div id="appstore"><img src="images/badge-iphone.png"/></div>
+            <div id="googleplay"><img src="images/badge-android.png"/></div>
+            </div>
+        <footer id="pie">ABOUT US   SUPPORT   BLOG    PRESS    API    JOBS    PRIVACY   TERMS<span style="color:gray";>&copy; 2014 Instagram </span></footer>
+    </div>
   </body>
 </html>
