--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
+    <!-- Header -->
+
+    <header>
+        <div id="logo-box">
+            <img src="images/brand.png">
+            <div class="button" id="Log-in">
+                <img src="images/home.png">
+                <p>Log in</p>
+            </div>
+        </div>
+    </header>
+
+    <!-- Main -->
+
+    <main>
+        <img id="phones" src="images/phones.png" alt="Phone">
+        <div id="box-white">
+            <h1>Capture and Share the World's Moments</h1>
+            <p> Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family. <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even
+                share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br> Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png" alt="Apple store">
+            <img id="google-play-btn" src="images/badge-android.png" alt="Google play">
+        </div>
+    </main>
+
+    <!-- Footer -->
+
+    <footer>
+        <nav id="menu-footer">
+            <ul>
+                <li><a>About Us</a></li>
+                <li><a>Support</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Press </a></li>
+                <li><a>API</a></li>
+                <li><a>Jobs</a></li>
+                <li><a>Privacy</a></li>
+                <li><a>Terms</a></li>
+                <li id="copyright">&copy; 2014 Instagram</li>
+            </ul>
+        </nav>
+    </footer>
+</body>
+
 </html>
