entrega lab-css-intragram-clone

--- a/index.html
+++ b/index.html
@@ -7,20 +7,36 @@
     <!-- don't forget to link your styles -->
   </head>
   <body>
-  <div class="capsula" > 
-    <div id= "fondo" >
-      <div id="iphone"><img src="images/phones.png"/></div>
-      <div id="instagram"><img src="images/brand.png"/></div>
-      <div id="frame" ><img src="images/frame.png"/>
-          <h1>Capture and Share the World's Moments</h1>
-        <p> Instagram is a fast, beautiful and fun way to share your life with
-        friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-        Oh yeah, did we mention it's free?</p>
+  <div class="fondo" > 
+      <div id= "capsula1">
+        <div id="iphone"><img src="images/phones.png"/></div>
+        <div id= "capsula2">
+          <div id= "capsula3">
+          <div id="instagram"><img src="images/brand.png"/></div>
+          <div id="casita"><img class="casitaimg" src="images/home.png"/><div id="login">Log In</div></div>
+          </div>
+          <div id= "capsula4">
+            <div id="frame" ><img src="images/frame.png"/>
+            <div id= "capsula5">
+            <h1>Capture and Share the World's Moments</h1>
+            <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.
+            
+            <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</br>
+            Oh yeah, did we mention it's free?</p></div>
+        <div id= "capsula6">
         <div id="appstore"><img src="images/badge-iphone.png"/></div>
             <div id="googleplay"><img src="images/badge-android.png"/></div>
             </div>
-        <footer id="pie">ABOUT US   SUPPORT   BLOG    PRESS    API    JOBS    PRIVACY   TERMS<span style="color:gray";>&copy; 2014 Instagram </span></footer>
+            </div>
+            </div>
+            </div>
+            
     </div>
+                <footer>
+        <h3> <span class="span1">About Us</span><span class="span1">Support</span> <span class="span1">Blog</span> <span class="span1">Press</span class="span1"> <span class="span1">API</span><span class="span1">Jobs</span><span class="span1">Privacy</span><span class="span1">Terms</span><span class="span">&copy2014 Instagram</span></h3>
+      </footer>
   </body>
+
 </html>
