CSS styles added to the CTA button and frame, missin the responsive media query

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <div class="upper-container">
+  <main class="upper-container">
 
     <div class="container-wrap image">
       <img src="./images/phones.png" alt="Instagram view">
@@ -35,7 +35,7 @@
 
     </div>
 
-  </div>
+  </main>
 
   <footer>
     <ul class="footer-links">  
